maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:60: error: illegal start of simple expression
  if ()
      ^JediEscaper:61: error: ')' expected but '}' found.
} 
^